added confirmation accepted checkbox for questionnaire
